<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffececec" >

    <!-- title区域 -->

    <RelativeLayout
        android:id="@+id/title_linear"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/title_back"
        android:orientation="horizontal" >

        <!-- 返回 -->

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@null"
            android:src="@drawable/back4" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/feedback_title"
            android:textColor="#ff000000"
            android:textSize="18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_linear"
        android:layout_marginTop="20dip" >

        <EditText
            android:gravity="top"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:id="@+id/feedback_edittext"
            android:layout_width="fill_parent"
            android:layout_height="100dip"
            android:hint="@string/feedback_text" />

        <Button
            android:id="@+id/feedback_post"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_below="@id/feedback_edittext"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20dip"
            android:background="#ff008DF9"
            android:text="@string/feedback_submit"
            android:textColor="#ffffffff"
            android:textSize="20sp" />
    </RelativeLayout>

</RelativeLayout>